[package]
name = "brshtop"
authors = ["Aristocratos <jakob@qvantnet.com>","Samuel Rembisz <sjrembisz07@gmail.com>", "Charlie Thomson <charliecthomson@gmail.com>"]
version = "0.2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = {path = "./dependencies/heim/heim", features=["full"]}
sysinfo = "0.23.0"

tokio = { version = "1", features = ["full"] }
tokio-stream = '0.1.7'
ascii_table = '4.0.2'
indicatif = "0.16.2"
futures = "0.3.19"